crates/mabo-go/tests/snapshots/render__render@alias_basic.mabo.snap
---
source: crates/mabo-go/tests/render.rs
description: "/// Sample alias.\nalias Sample = u32;"
input_file: crates/mabo-parser/tests/inputs/alias_basic.mabo
---
--- sample.go

// Code generated by mabo-go (v0.1.0). DO NOT EDIT.

package sample

import (
	mabo "github.com/dnaka91/mabo-go"
	buf "github.com/dnaka91/mabo-go/buf"
)

// Sample alias.
type Sample uint32


