crates/mabo-go/tests/snapshots/render__render@attribute_unit.mabo.snap
---
source: crates/mabo-go/tests/render.rs
description: "#[deprecated]\nstruct Sample"
input_file: crates/mabo-parser/tests/inputs/attribute_unit.mabo
---
--- sample.go

// Code generated by mabo-go (v0.1.0). DO NOT EDIT.

import (
	"github.com/dnaka91/mabo-go"
	"github.com/dnaka91/mabo-go/buf"
)

package sample

type Sample struct{}

func NewSample() Sample {
	return Sample{}
}

var _ buf.Encode = (*Sample)(nil)

func (v *Sample) Encode(w []byte) []byte {
	return w
}

var _ buf.Decode = (*Sample)(nil)

func (v *Sample) Decode(r []byte) ([]byte, error) {

	for len(r) > 0 {
		r2, id, err := buf.DecodeID(r)
		if err != nil {
			return nil, err
		}
		r = r2

		switch id {
			case buf.EndMarker:
				break
		}
	}


	return r, nil
}

var _ buf.Size = (*Sample)(nil)

func (v *Sample) Size() int {
	size := 0
	return size
}


