crates/mabo-go/tests/snapshots/render__render@const_basic.mabo.snap
---
source: crates/mabo-go/tests/render.rs
description: "const BOOL_TRUE: bool = true;\nconst BOOL_FALSE: bool = false;\nconst INT: u32 = 100;\nconst FLOAT: f64 = 5.5;\nconst STRING: string = \"value\";\nconst BYTES: bytes = [1, 2, 3];"
input_file: crates/mabo-parser/tests/inputs/const_basic.mabo
---
--- sample.go

// Code generated by mabo-go (v0.1.0). DO NOT EDIT.

import (
	"github.com/dnaka91/mabo-go"
	"github.com/dnaka91/mabo-go/buf"
)

package sample

const BoolTrue bool = true
const BoolFalse bool = false
const Int uint32 = 100
const Float float64 = 5.5
const String string = "value"
var Bytes []byte = []byte{1, 2, 3}

