crates/mabo-go/tests/snapshots/render__render@enum_many_ws.mabo.snap
---
source: crates/mabo-go/tests/render.rs
description: "/// Sample enum.\n enum     Sample    {\n\n       One      @1,\n\n       Two  (   u32   @1,     u64     @2)    @2,\n\n            Three     {\n\n                    field1:    u32      @1,\n\n                    field2:    bool     @2,\n\n            }    @3,\n\n }"
input_file: crates/mabo-parser/tests/inputs/enum_many_ws.mabo
---
--- sample.go

// Code generated by mabo-go (v0.1.0). DO NOT EDIT.

package sample

import (
	mabo "github.com/dnaka91/mabo-go"
	buf "github.com/dnaka91/mabo-go/buf"
)

type SampleVariant interface {
	 sealed()
}

// Sample enum.
type Sample SampleVariant

type Sample_One struct{}

func (v Sample_One) sealed() {}

func NewSample_One() Sample_One {
	return Sample_One{}
}

var _ buf.Encode = (*Sample_One)(nil)

func (v *Sample_One) Encode(w []byte) []byte {
	return nil
}

var _ buf.Decode = (*Sample_One)(nil)

func (v *Sample_One) Decode(r []byte) ([]byte, error) {

	for len(r) > 0 {
		r2, id, err := buf.DecodeID(r)
		if err != nil {
			return nil, err
		}
		r = r2

		switch id {
			case buf.EndMarker:
				break
		}
	}


	return r, nil
}

var _ buf.Size = (*Sample_One)(nil)

func (v *Sample_One) Size() int {
	size := 0
	return size
}

type Sample_Two struct {
	N0 uint32
	N1 uint64
}

func (v Sample_Two) sealed() {}

func NewSample_Two(
	n0 uint32,
	n1 uint64,
) Sample_Two {
	return Sample_Two{
		N0: n0,
		N1: n1,
	}
}

var _ buf.Encode = (*Sample_Two)(nil)

func (v *Sample_Two) Encode(w []byte) []byte {
	w = buf.EncodeField(w, 1, func (w []byte) []byte {
		return buf.EncodeU32(w, v.N0)
	})
	w = buf.EncodeField(w, 2, func (w []byte) []byte {
		return buf.EncodeU64(w, v.N1)
	})
	w = buf.EncodeU32(w, buf.EndMarker)
	return nil
}

var _ buf.Decode = (*Sample_Two)(nil)

func (v *Sample_Two) Decode(r []byte) ([]byte, error) {
	foundN0 := false
	foundN1 := false

	for len(r) > 0 {
		r2, id, err := buf.DecodeID(r)
		if err != nil {
			return nil, err
		}
		r = r2

		switch id {
			case 1:
				r2, value, err := buf.DecodeU32(r)
				if err != nil {
					return nil, err
				}
				r = r2
				v.N0 = value
				foundN0 = true
			case 2:
				r2, value, err := buf.DecodeU64(r)
				if err != nil {
					return nil, err
				}
				r = r2
				v.N1 = value
				foundN1 = true
			case buf.EndMarker:
				break
		}
	}

	if !foundN0 {
		return nil, buf.MissingFieldError{
			ID:    1,
			Field: "",
		}
	}
	if !foundN1 {
		return nil, buf.MissingFieldError{
			ID:    2,
			Field: "",
		}
	}

	return r, nil
}

var _ buf.Size = (*Sample_Two)(nil)

func (v *Sample_Two) Size() int {
	size := 0
	size += buf.SizeField(1, func() int {
		return buf.SizeU32(v.N0)
	})
	size += buf.SizeField(2, func() int {
		return buf.SizeU64(v.N1)
	})
	size += buf.SizeU32(buf.EndMarker)
	return size
}

type Sample_Three struct {
	Field1 uint32
	Field2 bool
}

func (v Sample_Three) sealed() {}

func NewSample_Three(
	field1 uint32,
	field2 bool,
) Sample_Three {
	return Sample_Three{
		Field1: field1,
		Field2: field2,
	}
}

var _ buf.Encode = (*Sample_Three)(nil)

func (v *Sample_Three) Encode(w []byte) []byte {
	w = buf.EncodeField(w, 1, func (w []byte) []byte {
		return buf.EncodeU32(w, v.Field1)
	})
	w = buf.EncodeField(w, 2, func (w []byte) []byte {
		return buf.EncodeBool(w, v.Field2)
	})
	w = buf.EncodeU32(w, buf.EndMarker)
	return nil
}

var _ buf.Decode = (*Sample_Three)(nil)

func (v *Sample_Three) Decode(r []byte) ([]byte, error) {
	foundField1 := false
	foundField2 := false

	for len(r) > 0 {
		r2, id, err := buf.DecodeID(r)
		if err != nil {
			return nil, err
		}
		r = r2

		switch id {
			case 1:
				r2, value, err := buf.DecodeU32(r)
				if err != nil {
					return nil, err
				}
				r = r2
				v.Field1 = value
				foundField1 = true
			case 2:
				r2, value, err := buf.DecodeBool(r)
				if err != nil {
					return nil, err
				}
				r = r2
				v.Field2 = value
				foundField2 = true
			case buf.EndMarker:
				break
		}
	}

	if !foundField1 {
		return nil, buf.MissingFieldError{
			ID:    1,
			Field: "field1",
		}
	}
	if !foundField2 {
		return nil, buf.MissingFieldError{
			ID:    2,
			Field: "field2",
		}
	}

	return r, nil
}

var _ buf.Size = (*Sample_Three)(nil)

func (v *Sample_Three) Size() int {
	size := 0
	size += buf.SizeField(1, func() int {
		return buf.SizeU32(v.Field1)
	})
	size += buf.SizeField(2, func() int {
		return buf.SizeBool(v.Field2)
	})
	size += buf.SizeU32(buf.EndMarker)
	return size
}


