crates/mabo-go/tests/snapshots/render__render@import_basic.mabo.snap
---
source: crates/mabo-go/tests/render.rs
description: "use other::schema::Sample;\nuse second::submodule;"
input_file: crates/mabo-parser/tests/inputs/import_basic.mabo
---
--- sample.go

// Code generated by mabo-go (v0.1.0). DO NOT EDIT.

package sample

import (
	mabo "github.com/dnaka91/mabo-go"
	buf "github.com/dnaka91/mabo-go/buf"
)


